# learn-dx12-journey

./: .gitignore  README.md  set_up.md
depth_complexity/: .gitignore  BlendApp.cpp  BlendApp_normal.cpp  BlendDemo.vcxproj  BlendDemo.vcxproj.filters
depth_complexity/Shaders/: Default.hlsl  facenormal.hlsl  subdivision.hlsl
dx12_framework/: BoxApp.cpp  CMakeLists.txt
dx12_framework/Common/: CMakeLists.txt  GameTimer.cpp  MathHelper.cpp  MathHelper.h  UploadBuffer.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h
dx12_framework/Shaders/: color.hlsl
mirror_demo/: StencilApp.cpp
